[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
openssl = { version = "0.10", features = ["vendored"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_derive = "1.0.171"
